--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html>
+    <head>
+		<meta charset="UTF-8">
+		<title>Pensamento Computacional - EM</title>
+    </head>
 
+    <body>
+        <h1> Pensamento Computacional - EM </h1>
+
+        <p> Mussum Ipsum, cacilds vidis litro abertis. Manduma pindureta quium dia nois paga. Vehicula non.<br>
+            Ut sed ex eros. Vivamus sit amet nibh non tellus tristique interdum. Sapien in monti palavris qui <br>
+            num significa nadis i pareci latim. Si num tem leite então bota uma pinga aí cumpadi!
+        </p>
+
+        <p> Mussum Ipsum, cacilds vidis litro abertis. <strong>Manduma pindureta quium dia nois paga.</strong> Vehicula non.<br>
+            Ut sed ex eros. Vivamus sit amet nibh non tellus tristique interdum. Sapien in monti palavris qui <br>
+            num significa nadis i pareci latim. Si num tem leite então bota uma pinga aí cumpadi!
+        </p>
+    </body>
+</html>
