--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     </head>
 
     <body>
-        <h1> Pensamento Computacional - EM </h1>
+        <h1 id="titulo"> Pensamento Computacional - EM </h1>
 
-        <p> Mussum Ipsum, cacilds vidis litro abertis. Manduma pindureta quium dia nois paga. Vehicula non.<br>
+        <p class="texto"> Mussum Ipsum, cacilds vidis litro abertis. Manduma pindureta quium dia nois paga. Vehicula non.<br>
             Ut sed ex eros. Vivamus sit amet nibh non tellus tristique interdum. Sapien in monti palavris qui <br>
             num significa nadis i pareci latim. Si num tem leite então bota uma pinga aí cumpadi!
         </p>
