--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             num significa nadis i pareci latim. Si num tem leite então bota uma pinga aí cumpadi!
         </p>
 
-        <p> Mussum Ipsum, cacilds vidis litro abertis. <strong>Manduma pindureta quium dia nois paga.</strong> Vehicula non.<br>
+        <p class="texto"> Mussum Ipsum, cacilds vidis litro abertis. <strong>Manduma pindureta quium dia nois paga.</strong> Vehicula non.<br>
             Ut sed ex eros. Vivamus sit amet nibh non tellus tristique interdum. Sapien in monti palavris qui <br>
             num significa nadis i pareci latim. Si num tem leite então bota uma pinga aí cumpadi!
         </p>
