--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <body>
         <h1 id="titulo"> Pensamento Computacional - EM </h1>
 
+        <img src="pc-em.jpeg" alt="Grupo de Formadores PC EM">
+
         <p class="texto"> Mussum Ipsum, cacilds vidis litro abertis. Manduma pindureta quium dia nois paga. Vehicula non.<br>
             Ut sed ex eros. Vivamus sit amet nibh non tellus tristique interdum. Sapien in monti palavris qui <br>
             num significa nadis i pareci latim. Si num tem leite então bota uma pinga aí cumpadi!
