--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <h1 id="titulo"> Pensamento Computacional - EM </h1>
 
-        <img src="pc-em.jpeg" alt="Grupo de Formadores PC EM">
+        <img id="banner"src="pc-em.jpeg" alt="Grupo de Formadores PC EM">
 
         <p class="texto"> Mussum Ipsum, cacilds vidis litro abertis. Manduma pindureta quium dia nois paga. Vehicula non.<br>
             Ut sed ex eros. Vivamus sit amet nibh non tellus tristique interdum. Sapien in monti palavris qui <br>
