--- a/index.html
+++ b/index.html
@@ -11,19 +11,23 @@
         <div class="classe-titulo">
             <h1 id="titulo"> Pensamento Computacional - EM </h1>
         </div>
+
         <section class="conteudo">
             <div class="classe-banner">
                 <img id="banner" src="pc-em.jpeg" alt="Grupo de Formadores PC EM">
             </div>
-            <p class="texto"> Mussum Ipsum, cacilds vidis litro abertis. Manduma pindureta quium dia nois paga. Vehicula non.<br>
-                Ut sed ex eros. Vivamus sit amet nibh non tellus tristique interdum. Sapien in monti palavris qui <br>
-                num significa nadis i pareci latim. Si num tem leite então bota uma pinga aí cumpadi!
-            </p>
+            
+            <div class="classe-banner">
+                <p class="texto"> Mussum Ipsum, cacilds vidis litro abertis. Manduma pindureta quium dia nois paga. Vehicula non.<br>
+                    Ut sed ex eros. Vivamus sit amet nibh non tellus tristique interdum. Sapien in monti palavris qui <br>
+                    num significa nadis i pareci latim. Si num tem leite então bota uma pinga aí cumpadi!
+                </p>
 
-            <p class="texto"> Mussum Ipsum, cacilds vidis litro abertis. <strong>Manduma pindureta quium dia nois paga.</strong> Vehicula non.<br>
-                Ut sed ex eros. Vivamus sit amet nibh non tellus tristique interdum. Sapien in monti palavris qui <br>
-                num significa nadis i pareci latim. Si num tem leite então bota uma pinga aí cumpadi!
-            </p>
+                <p class="texto"> Mussum Ipsum, cacilds vidis litro abertis. <strong>Manduma pindureta quium dia nois paga.</strong> Vehicula non.<br>
+                    Ut sed ex eros. Vivamus sit amet nibh non tellus tristique interdum. Sapien in monti palavris qui <br>
+                    num significa nadis i pareci latim. Si num tem leite então bota uma pinga aí cumpadi!
+                </p>
+            </div>
         </section>
     </body>
 </html>
