--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
     <body>
 
+        <header class="cabecalho">
+            <h1>GRUPO DE ESTUDOS</h1>
+        </header>
+
         <div class="classe-titulo">
             <h1 id="titulo"> Pensamento Computacional - EM </h1>
         </div>
@@ -16,7 +20,7 @@
             <div class="classe-banner">
                 <img id="banner" src="pc-em.jpeg" alt="Grupo de Formadores PC EM">
             </div>
-            
+
             <div class="classe-banner">
                 <p class="texto"> Mussum Ipsum, cacilds vidis litro abertis. Manduma pindureta quium dia nois paga. Vehicula non.<br>
                     Ut sed ex eros. Vivamus sit amet nibh non tellus tristique interdum. Sapien in monti palavris qui <br>
